--- a/index.html
+++ b/index.html
@@ -3,20 +3,10 @@
 
 <head>
     <meta charset="utf-8">
-
-    <title>image upload</title>
+    <title>blank</title>
 </head>
 
 <body>
-    <script>
-        function upload(images) {
-            alert("uploading image...");
-        }
-    </script>
-
-    <h1>image upload</h1>
-
-    <input id="image" type="file" accept="image/*" onchange="upload(this.files)" />
 </body>
 
 </html>
