--- a/index.html
+++ b/index.html
@@ -4,13 +4,25 @@
 <head>
     <meta charset="utf-8">
     <title>load images</title>
+    <script type="text/javascript" src="https://js.live.net/v7.2/OneDrive.js"></script>
 </head>
 
 <body>
     <input type="file" id="files" name="files[]" multiple />
     <output id="list"></output>
+    <br/>
+    <br/>
+    <br/>
+    <input id="fileUploadControl" name="fileUploadControl" type="file" />
+    <br/>
+    <button onclick="launchSaveToOneDrive">Save to OneDrive</button>
 
     <script>
+        function launchSaveToOneDrive() {
+            var odOptions = { /* ... specify the desired options ... */ };
+            OneDrive.save(odOptions);
+        }
+
         function handleFileSelect(evt) {
             var files = evt.target.files; // FileList object
 
