--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-    <input type="file" id="files" name="files[]" multiple />
+    <input type="image" id="files" name="files[]" multiple />
     <output id="list"></output>
 
     <script>
