--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="utf-8">
     <title>load images</title>
+
+    <script type="text/javascript" src="https://js.live.net/v7.2/OneDrive.js"></script>
 </head>
 
 <body>
@@ -27,6 +29,33 @@
 
         document.getElementById('files').addEventListener('change', handleFileSelect, false);
     </script>
+
+    <br/>
+    <br/>
+    <br/>
+
+    <script type="text/javascript">
+        function launchSaveToOneDrive() {
+            const odOptions = {
+                clientId: "",
+                action: "save",
+                sourceInputElementId: "fileUploadControl",
+                sourceUri: "",
+                fileName: "",
+                openInNewWindow: true,
+                advanced: {},
+                success: function (files) { alert("success!"); },
+                progress: function (p) { /* progress handler */ },
+                cancel: function () { /* cancel handler */ },
+                error: function (e) { alert(e); }
+            }
+            OneDrive.save(odOptions);
+        }
+    </script>
+
+    <input id="fileUploadControl" name="fileUploadControl" type="file" accept="image/*" />
+    <br/>
+    <button onclick="launchSaveToOneDrive">Save to OneDrive</button>
 </body>
 
 </html>
