--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
     <input id="fileUploadControl" name="fileUploadControl" type="file" accept="image/*" />
     <br/>
-    <button onclick="launchSaveToOneDrive">Save to OneDrive</button>
+    <button onclick="launchSaveToOneDrive()">Save to OneDrive</button>
 </body>
 
 </html>
