--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 
     <script>
         function handleFileSelect(evt) {
-            var files = evt.target.files; // FileList object
+            const files = evt.target.files; // FileList object
 
             // files is a FileList of File objects. List some properties.
-            var output = [];
-            for (var i = 0, f; f = files[i]; i++) {
+            const output = [];
+            for (let i = 0, f; f = files[i]; i++) {
                 output.push('<li><strong>', escape(f.name), '</strong> (', f.type || 'n/a', ') - ',
                     f.size, ' bytes, last modified: ',
                     f.lastModifiedDate ? f.lastModifiedDate.toLocaleDateString() : 'n/a',
