--- a/index.html
+++ b/index.html
@@ -22,9 +22,18 @@
                 output.push('<li><strong>', escape(f.name), '</strong> (', f.type || 'n/a', ')<br/>',
                     f.size, ' bytes<br/>last modified: ',
                     f.lastModifiedDate ? f.lastModifiedDate.toLocaleDateString() : 'n/a',
+                    `<img id="${escape(f.name)}" src="" alt="${escape(f.name)}" style="width:100pt"/>`,
                     '</li>');
             }
             document.getElementById('list').innerHTML = '<ul>' + output.join('') + '</ul>';
+
+            files.array.forEach(file => {
+                const reader = new FileReader();
+                reader.onload = event => {
+                    document.getElementById(escape(file.name)).src = event.target.result;
+                };
+                reader.readAsDataURL(file);
+            });
         }
 
         document.getElementById('files').addEventListener('change', handleFileSelect, false);
