--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <input type="camera" id="files" name="files[]" multiple accept="image/*;capture=camera" />
+    <input type="file" id="files" name="files[]" multiple accept="image/*;capture=camera" />
     <output id="list"></output>
 
     <script>
