--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
     <output id="list"></output>
 
     <script>
+        function handleNotifications(notification) {
+            alert(notification.subject);
+        }
+
         function handleFileSelect(evt) {
             const files = evt.target.files; // FileList object
 
