--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
     <script>
         function handleNotifications(notification) {
+            alert("yay!");
             alert(notification.subject);
         }
 
