removed capture camera

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-    <input type="file" id="files" name="files[]" multiple accept="image/*" capture="camera" />
+    <input type="file" id="files" name="files[]" multiple accept="image/*"/>
     <output id="list"></output>
 
     <script>
