added button for id request

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <br/>
     <br/>
     <button onclick="registerForNotifications()">Notifications</button>
+    <br/>
+    <br/>
+    <button onclick="requestIdentification()">Fingerprint</button>
 
     <script>
         function registerForNotifications() {
