changed the tag for fingerprint request

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         }
 
         function requestIdentification() {
-            document.location.replace("loop://identification");
+            document.location.replace("loop://authorisation");
         }
 
         function handleIdentificationResult(success) {
