--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         }
 
         function handleIdentificationResult(success) {
-            alert(`user ${success ? "identified" : "unknown"}`);
+            alert("figerprint scan: " + success);
         }
 
         function handleNotifications(notification) {
