--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <br/>
     <br/>
     <br/>
-    <button onclick="registerForNotifications()">Notifications</button>
+    <button onclick="document.location.replace('loop://notifications?tag=pedro@loopsoftware.fr')">Notifications</button>
     <br/>
     <br/>
-    <button onclick="requestIdentification()">Fingerprint</button>
+    <button onclick="document.location.replace('loop://authorisation')">Fingerprint</button>
 
     <script>
         function registerForNotifications() {
