changed function names

--- a/index.html
+++ b/index.html
@@ -14,10 +14,12 @@
     <br/>
     <br/>
     <br/>
-    <button onclick="document.location.replace('loop://notifications?tag=pedro@loopsoftware.fr')">Notifications</button>
+    <button onclick="loginUser()">Login</button>
+    <br/>
+    <button onclick="logoutUser()">Logout</button>
     <br/>
     <br/>
-    <button onclick="document.location.replace('loop://authorisation')">Fingerprint</button>
+    <button onclick="authoriseUser()">Fingerprint</button>
 </body>
 
 </html>
