added a button for navigator.mediaDevices.getUserMedia

--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
     <br/>
     <br/>
     <button onclick="authoriseUser()">Fingerprint</button>
+    <br/>
+    <br/>
+    <button onclick="getCamera()">Camera</button>
 </body>
 
 </html>
