even more image stuff

--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
     <br/>
     <br/>
     <button onclick="getCamera()">Camera</button>
+    <br/>
+    <canvas id="photoCanvas"></canvas>
 </body>
 
 </html>
