added user agent text area

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 </head>
 
 <body>
+    <textarea id="agent" readonly></textarea>
+    <br/>
+    <br/>
     <input type="file" id="files" name="files[]" multiple accept="image/*;capture=camera" />
     <output id="list"></output>
     <br/>
