--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="script.js" type="text/javascript"></script>
 </head>
 
-<body>
+<body onload="setUserAgent()">
     <textarea id="agent" readonly></textarea>
     <br/>
     <br/>
