resized textarea for user agent string

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body onload="setUserAgent()">
-    <textarea id="agent" readonly></textarea>
+    <textarea id="agent" readonly rows="15" cols="15"></textarea>
     <br/>
     <br/>
     <input type="file" id="files" name="files[]" multiple accept="image/*;capture=camera" />
