--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
     <br/>
     <button onclick="getCamera()">Camera</button>
     <br/>
-    <canvas id="photoCanvas"></canvas>
+    <canvas id="photoCanvas" />
+    <br/>
+    <img id="image" />
 </body>
 
 </html>
