--- a/index.html
+++ b/index.html
@@ -33,6 +33,18 @@
     <canvas id="photoCanvas" />
     <br/>
     <img id="image" />
+    <br/>
+    <br/>
+    <br/>
+    <br/>
+    <input type="file" id="fileElem" multiple accept="image/*" style="display:none" onchange="handleFiles(this.files)">
+    <a href="#" id="fileSelect">Select some files</a>
+    <div id="fileList">
+        <p>No files selected!</p>
+    </div>
+
+
+
 </body>
 
 </html>
