--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <br/>
     <button onclick="getCamera()">Camera</button>
     <br/>
-    <canvas id="photoCanvas" />
+    <canvas id="photoCanvas" width="800" height="600" />
     <br/>
     <img id="image" />
     <br/>
