changes capture tag

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <textarea id="agent" readonly rows="15" cols="15"></textarea>
     <br/>
     <br/>
-    <!-- <input type="file" id="files" name="files[]" multiple accept="image/*;capture=camera" /> -->
-    <input type="file" id="files" name="files[]" multiple accept="image/*" capture="camera" />
+    <input type="file" id="files" name="files[]" multiple accept="image/*;capture=camera" />
+    <!-- <input type="file" id="files" name="files[]" multiple accept="image/*" capture="camera" /> -->
     <output id="list"></output>
     <br/>
     <br/>
