--- a/sw/index.html
+++ b/sw/index.html
@@ -5,10 +5,15 @@
 <head>
     <meta charset="utf-8">
 
-    <title>push api test/title>
+    <title>push api test</title>
 </head>
 
 <body>
+    <h3>testing push api</h3>
+
+
+
+
     <script src="scripts/main.js"></script>
 </body>
 
